Export LiteratureSurvey.bib file from Zotero for use in latex.

--- a/Latex/LiteratureSurvey.tex
+++ b/Latex/LiteratureSurvey.tex
@@ -1,17 +1,26 @@
 \documentclass[]{article}
+\usepackage{hyperref}
+\usepackage{natbib}
 
 %opening
-\title{}
-\author{}
+\title{Literature Survey Title xxx}
+\author{Christopher Carroll}
 
 \begin{document}
 
 \maketitle
 
 \begin{abstract}
-
+This paper surveys the literature that utilizes the Household Finance and Consumption Survey. 
 \end{abstract}
 
-\section{}
+\section{Literature Suvey}
+
+\section{A Proposal on Including a Survey Module on Expectations}
+
+
+
+\bibliographystyle{apalike}
+\bibliography{LiteratureSurvey}
 
 \end{document}
